# 9router-model-select-tool

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/: RELEASE.md
.github/workflows/: build-installers.yml
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/cloakbrowser/: SKILL.md  package.json  server.mjs
src-tauri/resources/git-guardian-pro/: SKILL.md
src-tauri/resources/indie-app-shipping/: SKILL.md
src-tauri/resources/indie-app-shipping/assets/: account-deletion-page-template.html  eula-template.md  privacy-policy-template.md
src-tauri/resources/indie-app-shipping/references/android/: app-skeleton.md  metadata-aso.md  play-policies.md  screenshots.md  submission.md
src-tauri/resources/indie-app-shipping/references/ios/: app-skeleton.md  macos.md  metadata.md  review-guidelines.md  review-notes.md  screenshots.md
src-tauri/resources/indie-app-shipping/references/shared/: pricing-monetization.md  signal-metrics.md
src-tauri/resources/open-computer-use/: SKILL.md
src-tauri/resources/windows/: BUNDLED_VERSIONS.md
src-tauri/src/: lib.rs  main.rs
